<resources>
    <string name="app_name">Calculadora</string>
    <string name="c">C</string>
    <string name="divisao">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_x">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtracao">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="mais">+</string>
    <string name="ponto">.</string>
    <string name="_0">0</string>
    <string name="igual">=</string>
</resources>