<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expressao"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/limpar"
            style="@style/Operators_Button"
            android:background="@color/pink"
            android:text="@string/c" />

        <TextView
            android:id="@+id/divisao"
            style="@style/Operators_Button"
            android:background="@color/pink"
            android:text="@string/divisao" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/numero_sete"
            style="@style/Numbers_Button"
            android:text="@string/_7"/>
        <TextView
            android:id="@+id/numero_oito"
            style="@style/Numbers_Button"
            android:text="@string/_8"/>
        <TextView
            android:id="@+id/numero_nove"
            style="@style/Numbers_Button"
            android:text="@string/_9"/>

        <TextView
            android:id="@+id/multiplicacao"
            style="@style/Operators_Button"
            android:background="@color/pink"
            android:text="@string/_x" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/numero_quatro"
            style="@style/Numbers_Button"
            android:text="@string/_4"/>
        <TextView
            android:id="@+id/numero_cinco"
            style="@style/Numbers_Button"
            android:text="@string/_5"/>
        <TextView
            android:id="@+id/numero_seis"
            style="@style/Numbers_Button"
            android:text="@string/_6"/>

        <TextView
            android:id="@+id/subtracao"
            style="@style/Operators_Button"
            android:background="@color/pink"
            android:text="@string/subtracao" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/numero_um"
            style="@style/Numbers_Button"
            android:text="@string/_1"/>
        <TextView
            android:id="@+id/numero_dois"
            style="@style/Numbers_Button"
            android:text="@string/_2"/>
        <TextView
            android:id="@+id/numero_tres"
            style="@style/Numbers_Button"
            android:text="@string/_3"/>

        <TextView
            android:id="@+id/adicao"
            style="@style/Operators_Button"
            android:background="@color/pink"
            android:text="@string/mais" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/ponto"
            style="@style/Numbers_Button"
            android:text="@string/ponto" />

        <TextView
            android:id="@+id/numero_zero"
            style="@style/Numbers_Button"
            android:text="@string/_0" />

        <ImageView
            android:id="@+id/backspace"
            style="@style/Numbers_Button"
            android:src="@drawable/backspace"
            android:scaleType="center"/>

        <TextView
            android:id="@+id/igual"
            style="@style/Operators_Button"
            android:background="@color/pink"
            android:text="@string/igual" />

    </LinearLayout>

</LinearLayout>